# google-sheets-mcp

./: .gitignore  COMPACT_JSON_GLOBAL_SOLUTION.md  COMPACT_JSON_IMPLEMENTATION.md  COMPACT_JSON_IMPLEMENTATION_PLAN.md  COMPACT_RESPONSE_SOLUTION.md  CREDENTIALS_SETUP.md  CURRENT_TOOLS_STATUS.md  DETAILED_METADATA_TOOL.md  DETAILED_SPREADSHEET_OPTIMIZATION.md  EMBEDDED_OBJECTS_FIX_SUMMARY.md  ENHANCED_SHEETS_MANAGEMENT_GUIDE.md  GET_SHEET_METADATA_IMPROVEMENTS.md  GOOGLE_SHEETS_API_CALLS.md  GOOGLE_SHEETS_API_DETAILED.md  GOOGLE_SHEETS_API_PLAN.md  GOOGLE_SHEETS_API_TOOLS_REPORT.md  GOOGLE_SHEETS_INTEGRATED_TOOLS.md  GOOGLE_SHEETS_READING_GUIDE.md  INDIVIDUAL_HANDLERS_GUIDE.md  JSON_RESPONSE_FORMATS_SUMMARY.md  MANIFEST.in  MCP_SETUP_GUIDE.md  ONE_CLICK_SETUP.md  PIVOT_TABLE_FIX_SUMMARY.md  PUBLISHING.md  README.md  RESPONSE_OPTIMIZATION_SUMMARY.md  SETUP.md  SHARING_GUIDE.md  SHEET_METADATA_SIMPLIFICATION.md  SHEET_NAME_REQUIRED_SUMMARY.md  SINGLE_SHEET_DETAILED_METADATA_SUMMARY.md  SPREADSHEET_METADATA_SIMPLIFICATION.md  TABLE_FIX_SUMMARY.md  TABLE_NAME_FIX_SUMMARY.md  TOOL_RENAMING_SUMMARY.md  TOOL_VERIFICATION_CHECKLIST.md  __main__.py  auto_setup.py  mcpDoc.txt  (+17 more)
Google_Sheets_API_Documentation/: 00_Complete_Reference.md  01_API_Overview.md  02_Endpoints_Reference.md  03_Schemas_Reference.md  04_Batch_Operations.md  10_Error_Handling.md  11_Rate_Limits.md  12_Enum_Values.md  13_Request_Examples.md  14_Tables_Reference.md  15_Table_Objects_Reference.md  README.md
examples/: change_column_property_example.py  manage_table_records_example.py  modify_cell_data_example.py  (+13 more)
(+106 files in other folders)
